<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/textView18"
        android:layout_width="132dp"
        android:layout_height="50dp"
        android:layout_marginTop="108dp"
        android:layout_marginBottom="23dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/text19"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextText10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="608dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/group2"
        android:clickable="true"
        android:contentDescription="@string/clickable_image"
        android:focusable="true"/>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView3"
        android:layout_width="419dp"
        android:layout_height="63dp"
        android:layout_marginBottom="5dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00FFFFFF"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00FFFFFF">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="44dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/text9"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView16"
                    app:layout_constraintTop_toBottomOf="@+id/imageView32"
                    app:layout_constraintVertical_bias="1.0" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="7dp"
                    android:text="@string/text8"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView15"
                    app:layout_constraintTop_toBottomOf="@+id/imageView31"
                    app:layout_constraintVertical_bias="1.0" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="68dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/text7"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView14"
                    app:layout_constraintTop_toBottomOf="@+id/imageView30"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/text10"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView29" />

                <ImageView
                    android:id="@+id/imageView32"
                    android:layout_width="34dp"
                    android:layout_height="21dp"
                    android:layout_marginEnd="41dp"
                    android:layout_marginBottom="29dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView31"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0"
                    app:srcCompat="@drawable/report"
                    android:clickable="true"
                    android:contentDescription="@string/clickable_image"
                    android:focusable="true"/>

                <ImageView
                    android:id="@+id/imageView31"
                    android:layout_width="27dp"
                    android:layout_height="23dp"
                    android:layout_marginEnd="60dp"
                    android:layout_marginBottom="27dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imageView32"
                    app:layout_constraintStart_toEndOf="@+id/imageView30"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0"
                    app:srcCompat="@drawable/search"
                    android:clickable="true"
                    android:contentDescription="@string/clickable_image"
                    android:focusable="true"/>

                <ImageView
                    android:id="@+id/imageView30"
                    android:layout_width="27dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="93dp"
                    android:layout_marginBottom="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imageView31"
                    app:layout_constraintStart_toEndOf="@+id/imageView29"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.375"
                    app:srcCompat="@drawable/calender"
                    android:clickable="true"
                    android:contentDescription="@string/clickable_image"
                    android:focusable="true"/>

                <ImageView
                    android:id="@+id/imageView29"
                    android:layout_width="34dp"
                    android:layout_height="27dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="87dp"
                    android:layout_marginBottom="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imageView30"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.375"
                    app:srcCompat="@drawable/first"
                    android:clickable="true"
                    android:contentDescription="@string/clickable_image"
                    android:focusable="true"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </com.google.android.material.navigation.NavigationView>

    <EditText
        android:id="@+id/editTextText10"
        android:layout_width="337dp"
        android:layout_height="47dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="27dp"
        android:background="@drawable/box"
        android:ems="10"
        android:hint="              Task , Projects and more"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/imageView44"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <ImageView
        android:id="@+id/imageView44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="76dp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toTopOf="@+id/navigationView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText10"
        app:srcCompat="@drawable/searchingdata"
        android:clickable="true"
        android:contentDescription="@string/clickable_image"
        android:focusable="true"/>

    <ImageView
        android:id="@+id/imageView43"
        android:layout_width="31dp"
        android:layout_height="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.281"
        app:srcCompat="@drawable/search"
        android:clickable="true"
        android:contentDescription="@string/clickable_image"
        android:focusable="true"/>

</androidx.constraintlayout.widget.ConstraintLayout>